# resume-generator

./: .gitignore  .vale.ini  Cargo.toml  README.md  cv.tex  flake.nix  quality-check.nix  resume-optimized.json  resume.json  test-complete-pipeline.sh
.vale/styles/: ResumeOptimization.yml
dist-corrected/: resume.html
dist-final-test/: resume.tex
dist-optimized/: resume.txt
src/: lib.rs  main.rs
src/cli/: build.rs  init.rs  keywords.rs  mod.rs  validate.rs
src/models/: resume.rs
src/templates/: engine.rs
src/utils/: latex.rs
src/validation/: mod.rs  resume_validator.rs
templates/html/: modern.html.j2
templates/html/themes/: clean-minimal.html.j2  modern-professional.html.j2  tech-timeline.html.j2
templates/latex/: moderncv.tex.j2
templates/text/: ats-friendly.txt.j2
tests/: cli_scenarios.rs  template_snapshots.rs
tests/fixtures/: invalid_resume.json  valid_resume.json
tests/snapshots/: template_snapshots__ats_text_output.snap  template_snapshots__html_output.snap  template_snapshots__latex_output.snap
